Add hello world using hotchocolate

--- a/GraphQL.API/appsettings.Development.json
+++ b/GraphQL.API/appsettings.Development.json
@@ -4,10 +4,7 @@
   },
   "GraphQlConfig": {
     "GraphQlApiEndpoint": "/api/graphql",
-    "UiEndpoint": "/graphql",
-    "ShowUi": true,
-    "VisualNodesEndpoint": "/graphql/browser",
-    "ShowVisualNodes": true
+    "UiEndpoint": "/graphql"
   },
   "Logging": {
     "LogLevel": {
