feat: use EntityFramework

--- a/GraphQL.API/GraphQL.API.csproj
+++ b/GraphQL.API/GraphQL.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.9.5" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.9.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
   </ItemGroup>
