--- a/GraphQL.API/appsettings.Development.json
+++ b/GraphQL.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Shop": "Server=.;Database=Shop;Trusted_Connection=True;TrustServerCertificate=True;"
+    "School": "Server=.;Database=School;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "GraphQlConfig": {
     "GraphQlApiEndpoint": "/api/graphql",
